Added documentation and unit tests
Added documentation for:
 * infiltrate_water_high
 *grass_intercepted_water

Added unit tests fr
 *infiltrate_water_high

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -1,9 +1,17 @@
 
 @Article{Cheng1978,
   author = "R. Cheng",
+  year = 1978,
   title = "Generating Beta Variates with Nonintegral Shape Parameters",
   journal = "Communications of the ACM",
   volume = 21,
-  year = 1978,
   pages = {317--322},
   }
+
+  @techreport{Corbett1968,
+    author = "E.S. Corbett & R.P. Crouse",
+    year = 1968,
+    title = "Rainfall interception by annual grass and chaparral ... losses compared",
+    type = "U.S. Forest Serv. Res. Paper PSW-48",
+    institution = "Pacific Southwest Forest and Range Experiment Station",
+    }
