Some testing for water_eqn
Inititial tests for water_eqn

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -15,3 +15,12 @@
     type = "U.S. Forest Serv. Res. Paper PSW-48",
     institution = "Pacific Southwest Forest and Range Experiment Station",
     }
+
+    @Article{Saxton2006,
+      author = " K. E. Saxton and W. J. Rawls.",
+      year = 2006,
+      title = "Soil water characteristic estimates by texture and organic matter for hydrologic solutions.",
+      journal = "Soil Science Society of America Journal",
+      volume = 70,
+      pages = {1569--1578},
+      }
