Improvement to water_eqn
added more unit tests and documentation

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -16,6 +16,16 @@
     institution = "Pacific Southwest Forest and Range Experiment Station",
     }
 
+    @Article{Cosby1984,
+      author = "B.J. Cosby, G.M. Hornberger, R.B. Clapp & T.R. Ginn",
+      year = 1984,
+      title = "A Statistical Exploration of the Relationships of Soil Moisture
+Characteristics to the Physical Properties of Soils",
+      journal = "Water Resources Rsearch",
+      volume = 20,
+      pages = {682--690},
+      }
+
     @Article{Saxton2006,
       author = " K. E. Saxton and W. J. Rawls.",
       year = 2006,
