Completion of documentation and testing for water_eqn

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -1,6 +1,6 @@
 
 @Article{Cheng1978,
-  author = "R. Cheng",
+  author = "Cheng, R.",
   year = 1978,
   title = "Generating Beta Variates with Nonintegral Shape Parameters",
   journal = "Communications of the ACM",
@@ -9,7 +9,7 @@
   }
 
   @techreport{Corbett1968,
-    author = "E.S. Corbett & R.P. Crouse",
+    author = "Corbett, E.S. and Crouse, R.P.",
     year = 1968,
     title = "Rainfall interception by annual grass and chaparral ... losses compared",
     type = "U.S. Forest Serv. Res. Paper PSW-48",
@@ -17,17 +17,17 @@
     }
 
     @Article{Cosby1984,
-      author = "B.J. Cosby, G.M. Hornberger, R.B. Clapp & T.R. Ginn",
+      author = "Cosby, B.J. and Hornberger, G.M. and Clapp, R.B. and Ginn, T.R.",
       year = 1984,
       title = "A Statistical Exploration of the Relationships of Soil Moisture
 Characteristics to the Physical Properties of Soils",
-      journal = "Water Resources Rsearch",
+      journal = "Water Resources Research",
       volume = 20,
       pages = {682--690},
       }
 
     @Article{Saxton2006,
-      author = " K. E. Saxton and W. J. Rawls.",
+      author = "Saxton, K.E. and Rawls, W.J.",
       year = 2006,
       title = "Soil water characteristic estimates by texture and organic matter for hydrologic solutions.",
       journal = "Soil Science Society of America Journal",
