Changes to unit test for temp & infiltrate_water_high
*Major changes to infiltrate_water_high unit test so it no longer fails "randomly"

*Changes to infiltrate_water_high function so that second for loop (j) looks at the index of nlyrs - 1 instead of nlyrs. Looking at nlyrs was looking incorrectly at one layer above the correct layer and causing unit tests to fail.

*began unit test testing on temperature functions (soil_temperature_init) (surface_temperature_under_snow)

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -16,21 +16,30 @@
     institution = "Pacific Southwest Forest and Range Experiment Station",
     }
 
-    @Article{Cosby1984,
-      author = "Cosby, B.J. and Hornberger, G.M. and Clapp, R.B. and Ginn, T.R.",
-      year = 1984,
-      title = "A Statistical Exploration of the Relationships of Soil Moisture
+  @Article{Cosby1984,
+    author = "Cosby, B.J. and Hornberger, G.M. and Clapp, R.B. and Ginn, T.R.",
+    year = 1984,
+    title = "A Statistical Exploration of the Relationships of Soil Moisture
 Characteristics to the Physical Properties of Soils",
-      journal = "Water Resources Research",
-      volume = 20,
-      pages = {682--690},
-      }
+    journal = "Water Resources Research",
+    volume = 20,
+    pages = {682--690},
+    }
 
-    @Article{Saxton2006,
-      author = "Saxton, K.E. and Rawls, W.J.",
-      year = 2006,
-      title = "Soil water characteristic estimates by texture and organic matter for hydrologic solutions.",
-      journal = "Soil Science Society of America Journal",
-      volume = 70,
-      pages = {1569--1578},
+  @Article{Saxton2006,
+    author = "Saxton, K.E. and Rawls, W.J.",
+    year = 2006,
+    title = "Soil water characteristic estimates by texture and organic matter for hydrologic solutions.",
+    journal = "Soil Science Society of America Journal",
+    volume = 70,
+    pages = {1569--1578},
+    }
+
+   @Article{Parton1998,
+     author = "Saxton, K.E. and Rawls, W.J.",
+     year = 2006,
+     title = "Soil water characteristic estimates by texture and organic matter for hydrologic solutions.",
+     journal = "Soil Science Society of America Journal",
+     volume = 70,
+     pages = {1569--1578},
       }
