--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -8,38 +8,38 @@
   pages = {317--322},
   }
 
-  @techreport{Corbett1968,
-    author = "Corbett, E.S. and Crouse, R.P.",
-    year = 1968,
-    title = "Rainfall interception by annual grass and chaparral ... losses compared",
-    type = "U.S. Forest Serv. Res. Paper PSW-48",
-    institution = "Pacific Southwest Forest and Range Experiment Station",
-    }
+@techreport{Corbett1968,
+  author = "Corbett, E.S. and Crouse, R.P.",
+  year = 1968,
+  title = "Rainfall interception by annual grass and chaparral ... losses compared",
+  type = "U.S. Forest Serv. Res. Paper PSW-48",
+  institution = "Pacific Southwest Forest and Range Experiment Station",
+  }
 
-  @Article{Cosby1984,
-    author = "Cosby, B.J. and Hornberger, G.M. and Clapp, R.B. and Ginn, T.R.",
-    year = 1984,
-    title = "A Statistical Exploration of the Relationships of Soil Moisture
+@Article{Cosby1984,
+  author = "Cosby, B.J. and Hornberger, G.M. and Clapp, R.B. and Ginn, T.R.",
+  year = 1984,
+  title = "A Statistical Exploration of the Relationships of Soil Moisture
 Characteristics to the Physical Properties of Soils",
-    journal = "Water Resources Research",
-    volume = 20,
-    pages = {682--690},
-    }
+  journal = "Water Resources Research",
+  volume = 20,
+  pages = {682--690},
+  }
 
-  @Article{Saxton2006,
-    author = "Saxton, K.E. and Rawls, W.J.",
-    year = 2006,
-    title = "Soil water characteristic estimates by texture and organic matter for hydrologic solutions.",
-    journal = "Soil Science Society of America Journal",
-    volume = 70,
-    pages = {1569--1578},
-    }
+@Article{Saxton2006,
+  author = "Saxton, K.E. and Rawls, W.J.",
+  year = 2006,
+  title = "Soil water characteristic estimates by texture and organic matter for hydrologic solutions.",
+  journal = "Soil Science Society of America Journal",
+  volume = 70,
+  pages = {1569--1578},
+  }
 
-   @Article{Parton1998,
-     author = "Saxton, K.E. and Rawls, W.J.",
-     year = 2006,
-     title = "Soil water characteristic estimates by texture and organic matter for hydrologic solutions.",
-     journal = "Soil Science Society of America Journal",
-     volume = 70,
-     pages = {1569--1578},
-      }
+ @Article{Parton1998,
+   author = "Parton, W.J. and Hartman, M. and Ojima, D. and Schimel, D.",
+   year = 1998,
+   title = "DAYCENT and its land surface submodel: description and testing.",
+   journal = "Global and Planetary Change",
+   volume = 19,
+   pages = {35-48},
+    }
