doc and unit tests for soil temp functions
* updated documentation for soil_temperature_today()
* unit tests for soil_temperature_today()
* fixes to unit tests for soil_temperature_interpolation and soil_temperature_init

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -43,3 +43,21 @@ Characteristics to the Physical Properties of Soils",
    volume = 19,
    pages = {35-48},
     }
+
+  @Article{Parton1978,
+    author = "Parton, W.J.",
+    year = 1978,
+    title = "Abiotic section of ELM.",
+    journal = "G. S. Innis, editor. Grassland simulation model.",
+    volume =,
+    pages = {31-53},
+     }
+
+   @Article{Parton1984,
+     author = "Parton, W.J.",
+     year = 1984,
+     title = "Predicting Soil Temperatures in A Shortgrass Steppe.",
+     journal = "Soil Science",
+     volume = 138,
+     pages = {93-101},
+      }
