Added unit tests and citations, updated documention
Added unit tests for hydraulic_redistribution

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -23,7 +23,43 @@
 Characteristics to the Physical Properties of Soils",
   journal = "Water Resources Research",
   volume = 20,
-  pages = {682--690},
+  pages = {682-690},
+  }
+
+@Article{Eitzinger2000
+  author = "Eitzinger, J and Parton, W.J. and Hartman, M.",
+  year = 2000,
+  title = "Improvement And Validation Of A Daily Soil Temperature Submodel For Freezing/thawing Periods",
+  journal = "Soil Science"
+  volume = 165,
+  pages = {525-534},
+  }
+
+@Article{Parton1978,
+  author = "Parton, W.J.",
+  year = 1978,
+  title = "Abiotic section of ELM.",
+  journal = "G. S. Innis, editor. Grassland simulation model.",
+  volume =,
+  pages = {31-53},
+  }
+
+@Article{Parton1984,
+  author = "Parton, W.J.",
+  year = 1984,
+  title = "Predicting Soil Temperatures in A Shortgrass Steppe.",
+  journal = "Soil Science",
+  volume = 138,
+  pages = {93-101},
+  }
+
+@Article{Parton1998,
+  author = "Parton, W.J. and Hartman, M. and Ojima, D. and Schimel, D.",
+  year = 1998,
+  title = "DAYCENT and its land surface submodel: description and testing.",
+  journal = "Global and Planetary Change",
+  volume = 19,
+  pages = {35-48},
   }
 
 @Article{Saxton2006,
@@ -34,30 +70,3 @@ Characteristics to the Physical Properties of Soils",
   volume = 70,
   pages = {1569--1578},
   }
-
- @Article{Parton1998,
-   author = "Parton, W.J. and Hartman, M. and Ojima, D. and Schimel, D.",
-   year = 1998,
-   title = "DAYCENT and its land surface submodel: description and testing.",
-   journal = "Global and Planetary Change",
-   volume = 19,
-   pages = {35-48},
-    }
-
-  @Article{Parton1978,
-    author = "Parton, W.J.",
-    year = 1978,
-    title = "Abiotic section of ELM.",
-    journal = "G. S. Innis, editor. Grassland simulation model.",
-    volume =,
-    pages = {31-53},
-     }
-
-   @Article{Parton1984,
-     author = "Parton, W.J.",
-     year = 1984,
-     title = "Predicting Soil Temperatures in A Shortgrass Steppe.",
-     journal = "Soil Science",
-     volume = 138,
-     pages = {93-101},
-      }
