Updated documentation and citations.
Updated documentation and citations for SW_Flow_lib.c, SW_SoilWater.c, and SOILWAT2.bib

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -35,6 +35,14 @@ Characteristics to the Physical Properties of Soils",
   pages = {525-534},
   }
 
+@techreport{Neitsch2005,
+author = "Neitsch S., Arnold J., Kiniry J., Williams J.",
+year = 2005,
+title = "Soil and water assessment tool (SWAT) theoretical documentation. version 2005.",
+type = "SWAT2K routines",
+institution = "Blackland Research Center, Texas Agricultural Experiment Station: Temple, TX.",
+}
+
 @Article{Parton1978,
   author = "Parton, W.J.",
   year = 1978,
