Fixed MOST suggested changes for my branch.
Changes not completed are those involving testing at nlyrs = MAX_LAYERS instead of nlyrs = 8.  Explanation on github.

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -1,3 +1,13 @@
+@Book{ASCE1985,
+  author = {Jones, E.B., Ward, T.J.},
+  title = {Watershed management in the eighties},
+  publisher = {American Society of civil Engineers},
+  year = 1985,
+  address = {New York},
+  isbn = {0872624498},
+  pages = {293-299},
+}
+
 @Article{ASCE2000,
   author = "Walter, I.A., Allen, A.G., et. al",
   year = 2000,
