New dedicated function `solar_declination`
Moved code to calculate solar declination from within `petfunc` to dedicated function `solar_declination`
- doxygen documentation
- new unit tests for `solar_declination`
- `petfunc` unit tests are still successful

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -210,3 +210,13 @@ institution = "Blackland Research Center, Texas Agricultural Experiment Station:
   author={Bradford, John B.},
   year={2004}
 }
+
+@article{spencer1971,
+  title = {Fourier Series Representation of the Position of the Sun},
+  author = {Spencer, J. W.},
+  date = {1971},
+  journaltitle = {Search},
+  volume = {2},
+  pages = {172--172}
+}
+
