Update documentation of `petfunc` and new related functions

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -16,6 +16,17 @@
   pages = {59},
   }
 
+
+@report{ASCE2005,
+  title = {The ASCE Standardized Reference Evapotranspiration Equation},
+  shorttitle = {The ASCE Standardized Reference Evapotranspiration Equation},
+  author = {Allen, Richard G. and Walter, Ivan A and Elliott, Ronald and Howell, Terry and Itenfisu, Daniel and Jensen, Marvin},
+  date = {2005},
+  pages = {59},
+  institution = {ASCE-EWRI Task Committee Report}
+}
+
+
 @Article{Bowen1926,
   author = "Bowen, I.S.",
   year = 1926,
@@ -218,5 +229,15 @@ institution = "Blackland Research Center, Texas Agricultural Experiment Station:
   journaltitle = {Search},
   volume = {2},
   pages = {172--172}
+}
+
+
+@report{allen1998,
+  title = {Crop Evapotranspiration - Guidelines for Computing Crop Water Requirements},
+  author = {Allen, Richard G. and Pereira, Luis S. and Raes, Dirk and Smith, Martin},
+  date = {1998},
+  institution = {FAO - Food and Agriculture Organizations of the United Nations},
+  location = {Rome},
+  series = {FAO Irrigation and Drainage Paper 56}
 }
 
