Overhaul of solar radiation calculation
Changes in inputs:
  - `climate.in`: remove `atmospheric transmissivity` because they were unused
  - `siteparam.in`: site latitude, slope, and aspect are now in consistent units (degrees) instead of a mix of radians and degrees
  - `siteparam.in`: orientation of aspect has changed: aspect = 0 indicates now a South facing slope instead of a North facing slope; values range -180 to +180 instead of 0-360

Changes in flow of calculations:
  - `petfunc()` that calculates PET takes now radiation as input argument instead of calculating it internally --> move calculation of radiation to the `SW_Flow` module

Changes in the calculation of extraterrestrial radiation:
  - function renamed to `solar_radiation_extraterrestrial()` from `solar_radiation_TOA()`
  - accounts now for varying sun-earth distance with new function `sun_earth_distance_squaredinverse()`
  - improved `solar_declination()` to better match calendar year to solar year
  - extraterrestrial radiation is now calculated both for a horizontal and a tilted surface (defined by slope and aspect)
--> future improvements: these calculations are repeated for each year, but values are the same per day of year -> these could be calculated only once and memoized

Changes in the calculation of global horizontal radiation:
  - previous function `solar_radiation_surface()` replaced by new functions `clearsky_directbeam()`, `clearnessindex_diffuse()`, and `atmospheric_attenuation_cloudfactor()`
  - new approach implements a clear-sky model (additionally attenuated by a cloud factor) and a separation model to treat direct beam and diffuse radiation separately

Changes in the calculation of tilted radiation:
  - previous function `_solar_radiation_sloped()` replaced, enhanced, and fixed by new function `sun_hourangles()`
  - new function `sun_hourangles()` calculates all possible sunrise and sunset hour angles for a horizontal and a tilted surface as well as the daily integral of the cos

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -241,3 +241,73 @@ institution = "Blackland Research Center, Texas Agricultural Experiment Station:
   series = {FAO Irrigation and Drainage Paper 56}
 }
 
+@article{engerer2015SEa,
+  title = {Minute Resolution Estimates of the Diffuse Fraction of Global Irradiance for Southeastern Australia},
+  author = {Engerer, N.A.},
+  date = {2015},
+  journal = {Solar Energy},
+  volume = {116},
+  pages = {215--237},
+  doi = {10.1016/j.solener.2015.04.012}
+}
+
+
+@article{bright2019JoRaSE,
+  title = {Engerer2: Global Re-Parameterisation, Update, and Validation of an Irradiance Separation Model at Different Temporal Resolutions},
+  shorttitle = {Engerer2},
+  author = {Bright, Jamie M. and Engerer, Nicholas A.},
+  date = {2019},
+  journal = {Journal of Renewable and Sustainable Energy},
+  volume = {11},
+  pages = {033701},
+  publisher = {{American Institute of Physics}},
+  doi = {10.1063/1.5097014}
+}
+
+@book{duffie2013,
+  title = {Solar Engineering of Thermal Processes},
+  author = {Duffie, John A. and Beckman, William A.},
+  date = {2013},
+  edition = {4th ed},
+  publisher = {John Wiley},
+  isbn = {978-0-470-87366-3},
+  pagetotal = {910}
+}
+
+@article{kasten1980SE,
+  title = {Solar and Terrestrial Radiation Dependent on the Amount and Type of Cloud},
+  author = {Kasten, Fritz and Czeplak, Gerhard},
+  date = {1980},
+  journal = {Solar Energy},
+  volume = {24},
+  pages = {177--189},
+  doi = {10.1016/0038-092X(80)90391-6}
+}
+
+@article{reindl1990SE,
+  title = {Evaluation of Hourly Tilted Surface Radiation Models},
+  author = {Reindl, D. T. and Beckman, W. A. and Duffie, J. A.},
+  date = {1990},
+  journaltitle = {Solar Energy},
+  volume = {45},
+  pages = {9--17},
+  doi = {10.1016/0038-092X(90)90061-G}
+}
+
+@article{threlkeld1957HPAC,
+  title = {Direct Solar Radiation Available on Clear Days},
+  author = {Threlkeld, J. L. and Jordan, R. C.},
+  date = {1957},
+  journaltitle = {Heat., Piping Air Cond.},
+  volume = {29}
+}
+
+@article{allen2006AaFM,
+  title = {Analytical Integrated Functions for Daily Solar Radiation on Slopes},
+  author = {Allen, Richard G. and Trezza, Ricardo and Tasumi, Masahiro},
+  date = {2006-09-21},
+  journal = {Agricultural and Forest Meteorology},
+  volume = {139},
+  pages = {55--73},
+  doi = {10.1016/j.agrformet.2006.05.012}
+}
