--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -311,3 +311,13 @@ institution = "Blackland Research Center, Texas Agricultural Experiment Station:
   pages = {55--73},
   doi = {10.1016/j.agrformet.2006.05.012}
 }
+
+@article{angstrom1924QJRMS,
+  title = {Solar and Terrestrial Radiation. Report to the International Commission for Solar Research on Actinometric Investigations of Solar and Atmospheric Radiation},
+  author = {Angstrom, A.},
+  date = {1924},
+  journaltitle = {Quarterly Journal of the Royal Meteorological Society},
+  volume = {50},
+  pages = {121--126},
+  doi = {10.1002/qj.49705021008}
+}
