Fix reference list to match newly added documentation

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -81,14 +81,14 @@ Characteristics to the Physical Properties of Soils",
   pages = {525-534},
   }
 
-@Article{Hess1961,
+@book{Hess1959,
   author = "Hess, S.L.",
-  year = 1961,
+  year = 1959,
   title = "Introduction to Theoretical Meteorology",
-  journal = "Weather",
-  volume = 16,
-  pages = {314},
+  publisher = {Holt, New York, USA},
+  pagetotal = {362}
   }
+
 
 @Article{Kopp2011,
   author = "Kopp, G. and Lean, J.L.",
@@ -320,4 +320,15 @@ institution = "Blackland Research Center, Texas Agricultural Experiment Station:
   volume = {50},
   pages = {121--126},
   doi = {10.1002/qj.49705021008}
+}
+
+@article{huang2018JAMC,
+  title = {A Simple Accurate Formula for Calculating Saturation Vapor Pressure of Water and Ice},
+  author = {Huang, Jianhua},
+  date = {2018-06-01},
+  journaltitle = {Journal of Applied Meteorology and Climatology},
+  volume = {57},
+  pages = {1265--1272},
+  publisher = {American Meteorological Society},
+  doi = {10.1175/JAMC-D-17-0334.1}
 }
