Implement generalized functionality for SWRCs
- previously, SOILWAT2 used
* Campbell 1974 as soil water retention curve SWRC (to convert between SWC and SWP)
* Cosby et al. 1984 as pedotransfer function PDF (to estimate Campbell's SWRC parameters)

--> this commit encapsulates SWRCs and PDFs in generalized functions so that (in the future) additional SWRCs and PDFs could be implemented and selected at run-time

- struct `SW_LAYER_INFO`:
* the array "swrcp[]" (replacing "thetaMatric", "psisMatric", "bMatric", and "binverseMatric") to hold parameters of any type of SWRC
* "swrc_type" indicates which SWRC is selected (per soil layer)
* "pdf_type" indicates which PDF would be used to estimated parameters at runtime if "swrcp_from_pdf" is TRUE

- generalized PDF function `SWRC_PDF_estimate_parameters()`, replacing `water_eqn`(), and Cosby-specific version `SWRC_PDF_Cosby1984_for_Campbell1974()`
- generalized function to check parameters `SWRC_check_parameters()` and Cosby-specific version `SWRC_check_parameters_for_Campbell1974()`
- generalized SWC->SWP conversion function `SW_SWRC_SWCtoSWP()` and `SWRC_SWCtoSWP()`, replacing `SW_SWCbulk2SWPmatric()`, and Campbell-specific version `SWRC_SWCtoSWP_Campbell1974()`
- generalized SWP->SWC conversion function `SW_SWRC_SWPtoSWC()` and `SWRC_SWPtoSWC()`, replacing `SW_SWPmatric2VWCBulk()`, and Campbell-specific version `SWRC_SWPtoSWC_Campbell1974()`

- the new functions are written such that rSOILWAT2 will be able to utilize them in R code

- updated documentation and unit tests
- this commit reproduced output from v6.2.1: `make bin bint_run` and `diff testing/Output/ testing/Output_ref/ -qs`

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -70,6 +70,7 @@ Characteristics to the Physical Properties of Soils",
   journal = "Water Resources Research",
   volume = 20,
   pages = {682-690},
+  doi = {10.1029/WR020i006p00682}
   }
 
 @Article{Eitzinger2000,
@@ -198,7 +199,6 @@ institution = "Blackland Research Center, Texas Agricultural Experiment Station:
 @phdthesis{Gerrits2010,
   title = {The role of interception in the hydrological cycle},
   ISBN = {9789065622488},
-  url = {http://resolver.tudelft.nl/uuid:7dd2523b-2169-4e7e-992c-365d2294d02e},
   school = {Technische Universiteit Delft},
   author = {Gerrits, A. M. J.},
   year = {2010}
@@ -332,3 +332,15 @@ institution = "Blackland Research Center, Texas Agricultural Experiment Station:
   publisher = {American Meteorological Society},
   doi = {10.1175/JAMC-D-17-0334.1}
 }
+
+@article{Campbell1974,
+  title = {A Simple Method for Determining Unsaturated Conductivity from Moisture Retention Data},
+  author = {Campbell, Gaylon S.},
+  date = {1974},
+  journaltitle = {Soil Science},
+  volume = {117},
+  number = {6},
+  pages = {311--314},
+  doi = {10.1097/00010694-197406000-00001}
+}
+
