New "van Genuchten" SWRC with (R-based) "Rosetta3" PDF
- implemented with names "vanGenuchten1980" and "Rosetta3"

- updated values: `N_SWRCs`, `N_PDFs`, `swrc2str[]`, `pdf2str[]`
- updated functions: `check_SWRC_vs_PDF()`, `SWRC_check_parameters()`, `SWRC_SWCtoSWP()`, `SWRC_SWPtoSWC()`
- new functions: `SWRC_check_parameters_for_vanGenuchten1980()`, `SWRC_SWCtoSWP_vanGenuchten1980`, `SWRC_SWPtoSWC_vanGenuchten1980()
- updated input files: `swrc_param.in` (to explain meaning and units of parameters if "vanGenuchten1980" is selected)

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -344,3 +344,23 @@ institution = "Blackland Research Center, Texas Agricultural Experiment Station:
   doi = {10.1097/00010694-197406000-00001}
 }
 
+@article{vanGenuchten1980,
+  title = {A Closed-form Equation for Predicting the Hydraulic Conductivity of Unsaturated Soils},
+  author = {van Genuchten, M. Th.},
+  date = {1980},
+  journaltitle = {Soil Science Society of America Journal},
+  volume = {44},
+  number = {5},
+  pages = {892--898},
+  doi = {10.2136/sssaj1980.03615995004400050002x}
+}
+
+@article{zhang2017JoH,
+  title = {Weighted Recalibration of the Rosetta Pedotransfer Model with Improved Estimates of Hydraulic Parameter Distributions and Summary Statistics (Rosetta3)},
+  author = {Zhang, Yonggen and Schaap, Marcel G.},
+  year = {2017},
+  journal = {Journal of Hydrology},
+  volume = {547},
+  pages = {39--53},
+  doi = {10.1016/j.jhydrol.2017.01.004}
+}
