Minimum/residual SWC consistent with selected SWRC
- previously, SOILWAT2 used the soil water retention curve by Campbell 1974 -- yet, minimum soil moisture conditions were based on user input and/or realistic minimum values and/or on an estimate of theta_min by Rawls & Brakensiek 1985

- SOILWAT2 now uses a theta_min that is consistent with the selected SWRC, i.e., estimated by the selected PDF (or provided as input via `swrc_params.in` depending on the selected SWRC)

-> new `SWRC_PDF_swcBulk_minimum()` delivers the correct `theta_min` (converted to bulk soil) depending on the selected `SWRC` (and in case of `pdf_name = "Cosby1984AndOthers"` reproduces previous (legacy) behavior)
-> new `legacy_theta_min()` reproduces previous behavior (code taken from `SW_SIT_init_run()`)
-> new `lower_limit_of_theta_min()` returns a "realistic" lower estimate of `theta_min` based on selected SWRC at a fixed tension

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -1,20 +1,10 @@
-@Book{ASCE1985,
-  author = {Jones, E.B., Ward, T.J.},
-  title = {Watershed management in the eighties},
-  publisher = {American Society of civil Engineers},
-  year = 1985,
-  address = {New York},
-  isbn = {0872624498},
-  pages = {293-299},
-}
-
 @Article{ASCE2000,
   author = "Walter, I.A., Allen, A.G., et. al",
   year = 2000,
   title = "ASCEs Standardized Reference Evapotranspiration Equation",
   journal = "Watershed Management and Operations Management 2000",
   pages = {59},
-  }
+}
 
 
 @report{ASCE2005,
@@ -363,4 +353,23 @@ institution = "Blackland Research Center, Texas Agricultural Experiment Station:
   volume = {547},
   pages = {39--53},
   doi = {10.1016/j.jhydrol.2017.01.004}
+}
+
+@book{brooks1964a,
+  title = {Hydraulic Properties of Porous Media. Hydrology Papers: 3},
+  author = {Brooks, R. H. and Corey, A. T.},
+  year = {1964},
+  publisher = {Colorado State University},
+  address = {Fort Collins, Colorado, USA}
+}
+
+@incollection{rawls1985WmitE,
+  title = {Prediction of Soil Water Properties for Hydrological Modeling},
+  booktitle = {Watershed Management in the Eighties},
+  author = {Rawls, W J and Brakensiek, D L},
+  editor = {Jones, E B and Ward, T. J.},
+  year = {1985},
+  pages = {293--299},
+  publisher = {American Society of Civil Engineers},
+  address = {New York, USA}
 }
