New SWRC: FXW (Fredlund-Xing-Wang)
- N_SWRCs and N_PDFs increased each by one
- `swrc2str[]` and `pdf2str[]` updated with "FXW" and "neuroFX2021" (PDF will be implemented in rSOILWAT2)
- new `SWRC_check_parameters_for_FXW()` to validate parameter values of FXW
- new `SWRC_SWCtoSWP_FXW()` to translate moisture content to water potential
    * There is no inverse of FWX --> implemented bracketing algorithm "interpolate, truncate, project" (ITP) to estimate phi from theta with new `itp_FXW_for_phi()`
- new `SWRC_SWPtoSWC_FXW()` to translate water potential to moisture content
    * new bare-bones version `FXW_phi_to_theta()`

- updated "wrapper" functions to incorporate FXW: `check_SWRC_vs_PDF()`, `SWRC_check_parameters()`, `SW_swcBulk_minimum()`, `SW_swcBulk_saturated()`, `SWRC_SWCtoSWP()` where theta = 0 is no allowed, `SWRC_SWPtoSWC()`

- `swE` macro defining Euler's constant - used by FXW
- `FXW_h0` and `FXW_hr` macros defining FXW constants

- expanded unit tests to incorporate FXW

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -373,3 +373,69 @@ institution = "Blackland Research Center, Texas Agricultural Experiment Station:
   publisher = {American Society of Civil Engineers},
   address = {New York, USA}
 }
+
+
+@article{fredlund1994CGJa,
+  title = {Equations for the soil-water characteristic curve},
+  author = {Fredlund, D. G. and Xing, A. Q.},
+  year = {1994},
+  journal = {Canadian Geotechnical Journal},
+  volume = {31},
+  pages = {512–-532},
+  doi = {10.1139/t94-061}
+}
+
+@article{rudiyanto2020JoH,
+  title = {Simple Functions for Describing Soil Water Retention and the Unsaturated Hydraulic Conductivity from Saturation to Complete Dryness},
+  author = {{Rudiyanto} and Minasny, Budiman and Shah, Ramisah M. and Setiawan, Budi I. and {van Genuchten}, Martinus Th.},
+  year = {2020},
+  journal = {Journal of Hydrology},
+  volume = {588},
+  pages = {125041},
+  doi = {10.1016/j.jhydrol.2020.125041}
+}
+
+@article{rudiyanto2021G,
+  title = {Pedotransfer Functions for Estimating Soil Hydraulic Properties from Saturation to Dryness},
+  author = {{Rudiyanto} and Minasny, Budiman and Chaney, Nathaniel W. and Maggi, Federico and Goh Eng Giap, Sunny and Shah, Ramisah M. and Fiantis, Dian and Setiawan, Budi I.},
+  year = {2021},
+  journal = {Geoderma},
+  volume = {403},
+  pages = {115194},
+  issn = {0016-7061},
+  doi = {10.1016/j.geoderma.2021.115194}
+}
+
+
+@article{wang2018wrr,
+  title = {Alternative Model for Predicting Soil Hydraulic Conductivity Over the Complete Moisture Range},
+  author = {Wang, Yunquan and Jin, Menggui and Deng, Zijuan},
+  year = {2018},
+  journal = {Water Resources Research},
+  volume = {54},
+  number = {9},
+  pages = {6860--6876},
+  doi = {10.1029/2018WR023037}
+}
+
+@article{wang2022WRRa,
+  title = {Development of a New Pedotransfer Function Addressing Limitations in Soil Hydraulic Models and Observations},
+  author = {Wang, Yunquan and Zhou, Jieliang and Ma, Rui and Zhu, Gaofeng and Zhang, Yongyong},
+  year = {2022},
+  journal = {Water Resources Research},
+  volume = {58},
+  number = {6},
+  pages = {e2021WR031406},
+  doi = {10.1029/2021WR031406}
+}
+
+@article{oliveira2021ATMS,
+  title = {An Enhancement of the Bisection Method Average Performance Preserving Minmax Optimality},
+  author = {Oliveira, I. F. D. and Takahashi, R. H. C.},
+  year = {2021},
+  journal = {ACM Transactions on Mathematical Software},
+  volume = {47},
+  number = {1},
+  pages = {1--24},
+  doi = {10.1145/3423597}
+}
