Add citations and references to `estimatePotNatVegComposition()`

--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -332,3 +332,25 @@ institution = "Blackland Research Center, Texas Agricultural Experiment Station:
   publisher = {American Meteorological Society},
   doi = {10.1175/JAMC-D-17-0334.1}
 }
+
+@article{paruelo1996EA,
+  title = {Relative Abundance of Plant Functional Types in Grasslands and Shrublands of North America},
+  author = {Paruelo, Jose M. and Lauenroth, W. K.},
+  year = {1996},
+  journal = {Ecological Applications},
+  volume = {6},
+  number = {4},
+  pages = {1212--1224},
+  doi = {10.2307/2269602}
+}
+
+@article{teeri1976O,
+  title = {Climatic Patterns and the Distribution of C4 Grasses in North America},
+  author = {Teeri, J. A. and Stowe, L. G.},
+  year = {1976},
+  journal = {Oecologia},
+  volume = {23},
+  number = {1},
+  pages = {1--12},
+  doi = {10.1007/bf00351210}
+}
