--- a/doc/SOILWAT2.bib
+++ b/doc/SOILWAT2.bib
@@ -332,3 +332,19 @@ institution = "Blackland Research Center, Texas Agricultural Experiment Station:
   publisher = {American Meteorological Society},
   doi = {10.1175/JAMC-D-17-0334.1}
 }
+
+
+@article{marsaglia1964SR,
+  title = {A Convenient Method for Generating Normal Variables},
+  author = {Marsaglia, G. and Bray, T. A.},
+  year = {1964},
+  journal = {SIAM Review},
+  volume = {6},
+  number = {3},
+  pages = {260--264},
+  publisher = {Society for Industrial and Applied Mathematics},
+  issn = {0036-1445},
+  doi = {10.1137/1006063}
+}
+
+
